syntax = "proto3";

import "types.proto";

message TelecommandMessage {
    int64 commandId = 1;
    ReportRequest reportRequest = 2;
    DateTime earliestRadiatonTime = 3;  // optional
    DateTime latestRadiationTime = 4;   // optional
    oneof message {
        bytes cltu = 5;
        bytes telecommandFrame = 6;
    }
}

message TelecommandReport {
    int64 commandId = 1; 
    // int64 lastCommandIdProcessed = 2; // this is not needed, commandId is referring to the command
    int64 lastCommandIdOK = 3; 
    ProductionState productionState = 4;
    int64 bufferAvailable = 5;                  // The available buffer for telecommands in bytes
    DateTime    notificationTime = 6;
    string origin = 7;                          // origin of the message 

    oneof report {
        TelecommandAck ack = 8;
        TelecommandFailure failure = 9; 
        TelecommandRadiation radiation = 10;
        TelecommandProductionStatusChange productionStatusChange = 11;    
        TelecommandBufferEmpty bufferEmpty = 12;
    }
}

message TelecommandAck {
}

message TelecommandFailure {
    Diagnostic diagnostic = 1;
}

message TelecommandRadiation {
    DateTime radiationStartTime = 1;        // ReportType RADIATED
    DateTime radiationStopTime = 2;         // ReportType RADIATED
}

message TelecommandProductionStatusChange {
}

message TelecommandBufferEmpty {
}

//enum ReportType {
    // RADIATED = 0;                // TelecommandRadiation 
    // EXPIRED = 1;                 // shifted to Diagnostic
    // PRODCUTION_STATUS_CHANGE = 1;
    // BUFFER_EMPTY = 2;
//}

enum Diagnostic {
    DUPLICATE_COMMAND_ID = 0;
    UNABLE_TO_PROCESS = 1;
    UNABLE_TO_STORE =2;
    OUT_OF_SEQUENCE = 3;
    INCOSISTENT_RADIATION_TIMES = 4;
    INVALID_TIME = 5;
    LATE_ARRIVAL = 6;
    GENERIC_ERROR = 7;
    OTHER_REASON = 8;
    RADIATION_FAILURE = 9;
    EXPIRED = 10; 
}

// TODO: decide on the granularity of reporting: All, only radiation , only failures?
enum ReportRequest {
    PRODUCE_REPORT = 0;
    NO_REPORT = 1;
}


